# inkjet

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  features
.github/workflows/: rust.yml
config/: languages.toml
examples/: terminal_highlight.rs  theme_example.rs
languages/ada/src/: parser.c
languages/asm/queries/asm/: highlights.scm
languages/asm/src/: grammar.json  node-types.json  parser.c
languages/awk/src/: parser.c  scanner.c
languages/bibtex/src/: grammar.json  node-types.json  parser.c
languages/bicep/src/: parser.c  scanner.c
languages/blueprint/src/: grammar.json  node-types.json  parser.c
languages/capnp/queries/: highlights.scm
languages/capnp/src/: grammar.json  node-types.json  parser.c
languages/cpp/queries/: highlights.scm  injections.scm
languages/cue/queries/: highlights.scm
languages/cue/src/: grammar.json  node-types.json  parser.c  scanner.c
languages/dart/queries/: highlights.scm
languages/dart/src/: scanner.c
languages/diff/src/: grammar.json  node-types.json  parser.c
languages/eex/src/: parser.c
languages/fish/queries/: highlights.scm
languages/fish/src/: parser.c  scanner.c
languages/forth/src/: parser.c
languages/fortran/src/: grammar.json  node-types.json  scanner.c
languages/glsl/queries/: highlights.scm  injections.scm
languages/glsl/src/: grammar.json  node-types.json
languages/heex/src/: parser.c
languages/iex/src/: parser.c
languages/ini/src/: parser.c
languages/jinja2/src/: parser.c
languages/jsx/queries/: highlights.scm
languages/jsx/src/: parser.c  scanner.c
languages/matlab/queries/emacs/: textobjects.scm
languages/matlab/queries/neovim/: tags.scm
languages/matlab/src/: grammar.json  node-types.json  parser.c  scanner.c
languages/meson/queries/: highlights.scm
languages/meson/src/: grammar.json  node-types.json  parser.c
languages/nim/queries/: highlights.scm
languages/nim/queries/nvim/: highlights.scm
languages/nim/queries/queries/helix/: highlights.scm
languages/nim/queries/queries/nvim/: untested_locals.scm
languages/nim/src/: grammar.json  node-types.json  scanner.c  scanner.cc
languages/nim/src/tree_sitter/: array.h.license
languages/objc/queries/: highlights.scm  injections.scm
languages/ocaml_interface/src/: scanner.c
languages/openscad/queries/: highlights.scm  locals.scm
languages/openscad/src/: grammar.json  node-types.json  parser.c
languages/pascal/src/: parser.c
languages/plaintext/src/: parser.c
languages/racket/queries/: highlights.scm  locals.scm
languages/racket/src/: parser.c  scanner.c
languages/scheme/queries/: highlights.scm
languages/scheme/src/: parser.c
languages/vim/queries/: highlights.scm
languages/vim/src/: scanner.c
languages/wast/queries/: highlights.scm
languages/wast/src/: binding.cc  parser.c
languages/wat/src/: binding.cc  parser.c
languages/wgsl/queries/: highlights.scm
languages/wgsl/src/: grammar.json  node-types.json  parser.c  scanner.c
languages/x86asm/queries/: highlights.scm
languages/x86asm/src/: grammar.json  parser.c
src/: constants.rs  error.rs  formatter.rs  languages.rs  languages.toml  lib.rs  threaded.rs
src/formatter/: constants.rs  html.rs  html_themed.rs  mod.rs  new_theme.rs  terminal.rs  terminal_themed.rs  theme.rs
src/formatter/theme/: mod.rs
src/theme/: mod.rs
tests/: rendering.rs  snippets.html  snippets.rs  special_langs.rs  themed_html.rs
tests/samples/: Ada  Asm  Astro  Awk  Bash  Bibtex  Bicep  Blueprint  C  Clojure  CommonLisp  Cpp  Css  Cue  D  Dart  Diff  Dockerfile  Eex  Elisp  Elixir  Elm  Erlang  Fish  Forth  Fortran  Gdscript  Gleam  Glsl  Go  Haskell  Heex  Ini  Java  Javascript  Jsx  Julia  Kotlin  Latex  Llvm  (+31 more)
