[package]
name = "inkjet"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Colonial-Dev/inkjet/"
description = "A batteries-included syntax highlighting library for Rust, based on tree-sitter."
keywords = ["tree-sitter", "syntax", "highlighting", "highlight"]

include  = [
	"/config",
	"/languages/*",
	"/src",
	"build.rs"
]

[features]
default = ["html", "all_languages"]

html = ["dep:v_htmlescape"]

all_languages = [
    "language-ada",
    "language-asm",
    "language-astro",
    "language-awk",
    "language-bash",
    "language-bibtex",
    "language-bicep",
    "language-blueprint",
    "language-c",
    "language-capnp",
    "language-clojure",
    "language-cmake",
    "language-c-sharp",
    "language-commonlisp",
    "language-cpp",
    "language-css",
    "language-cue",
    "language-d",
    "language-dart",
    "language-diff",
    "language-dockerfile",
    "language-elisp",
    "language-elixir",
    "language-elm",
    "language-erlang",
    "language-forth",
    "language-fortran",
    "language-gdscript",
    "language-gleam",
    "language-glsl",
    "language-go",
    "language-haskell",
    "language-html",
    "language-ini",
    "language-java",
    "language-javascript",
    "language-jinja2",
    "language-json",
    "language-julia",
    "language-just",
    "language-kotlin",
    "language-latex",
    "language-llvm",
    "language-lua",
    "language-make",
    "language-matlab",
    "language-meson",
    "language-nim",
    "language-nix",
    "language-ocaml",
    "language-ocaml-interface",
    "language-openscad",
    "language-pascal",
    "language-php",
    "language-proto",
    "language-python",
    "language-r",
    "language-racket",
    "language-regex",
    "language-ruby",
    "language-rust",
    "language-scala",
    "language-scheme",
    "language-scss",
    "language-sql",
    "language-swift",
    "language-toml",
    "language-typescript",
    "language-wast",
    "language-wat",
    "language-x86asm",
    "language-wgsl",
    "language-yaml",
    "language-zig",
]

language-ada = []
language-asm = []
language-astro = []
language-awk = []
language-bash = []
language-bibtex = []
language-bicep = []
language-blueprint = []
language-c = []
language-capnp = []
language-clojure = []
language-cmake = []
language-c-sharp = []
language-commonlisp = []
language-cpp = []
language-css = []
language-cue = []
language-d = []
language-dart = []
language-diff = []
language-dockerfile = []
language-elisp = []
language-elixir = []
language-elm = []
language-erlang = []
language-forth = []
language-fortran = []
language-gdscript = []
language-gleam = []
language-glsl = []
language-go = []
language-haskell = []
language-html = []
language-ini = []
language-java = []
language-javascript = []
language-jinja2 = []
language-json = []
language-julia = []
language-just = []
language-kotlin = []
language-latex = []
language-llvm = []
language-lua = []
language-make = []
language-matlab = []
language-meson = []
language-nim = []
language-nix = []
language-ocaml = []
language-ocaml-interface = []
language-openscad = []
language-pascal = []
language-php = []
language-proto = []
language-python = []
language-r = []
language-racket = []
language-regex = []
language-ruby = []
language-rust = []
language-scala = []
language-scheme = []
language-scss = []
language-sql = []
language-swift = []
language-toml = []
language-typescript = []
language-wast = []
language-wat = []
language-x86asm = []
language-wgsl = []
language-yaml = []
language-zig = []

[dependencies]
once_cell = "1.18.0"
thiserror = "1.0.44"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"

v_htmlescape = { version = "0.15.8", optional = true }

[build-dependencies]
anyhow = "1"
cc = "1"
indoc = "2.0.3"
fs_extra = "1.3.0"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
