[package]
name = "inkjet"
version = "0.10.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Colonial-Dev/inkjet/"
description = "A batteries-included syntax highlighting library for Rust, based on tree-sitter."
keywords = ["tree-sitter", "syntax", "highlighting", "highlight"]
categories = ["text-processing"]

include  = [
	"/config",
	"/languages/*",
	"/src",
	"/build"
]

build = "build/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["html", "theme", "all_languages"]

html = ["dep:v_htmlescape"]
theme = ["html", "dep:ahash", "dep:toml", "dep:serde"]
development = ["dep:syn", "dep:proc-macro2", "dep:quote", "dep:prettyplease", "dep:fs_extra"]

all_languages = [
    "language-ada",
    "language-asm",
    "language-astro",
    "language-awk",
    "language-bash",
    "language-bibtex",
    "language-bicep",
    "language-blueprint",
    "language-c",
    "language-capnp",
    "language-clojure",
    "language-c-sharp",
    "language-commonlisp",
    "language-cpp",
    "language-css",
    "language-cue",
    "language-d",
    "language-dart",
    "language-diff",
    "language-dockerfile",
    "language-eex",
    "language-elisp",
    "language-elixir",
    "language-elm",
    "language-erlang",
    "language-forth",
    "language-fortran",
    "language-gdscript",
    "language-gleam",
    "language-glsl",
    "language-go",
    "language-haskell",
    "language-hcl",
    "language-heex",
    "language-html",
    "language-iex",
    "language-ini",
    "language-java",
    "language-javascript",
    "language-json",
    "language-jsx",
    "language-kotlin",
    "language-latex",
    "language-llvm",
    "language-lua",
    "language-make",
    "language-matlab",
    "language-meson",
    "language-nim",
    "language-nix",
    "language-ocaml",
    "language-ocaml-interface",
    "language-openscad",
    "language-pascal",
    "language-php",
    "language-plaintext",
    "language-proto",
    "language-python",
    "language-r",
    "language-racket",
    "language-regex",
    "language-ruby",
    "language-rust",
    "language-scala",
    "language-scheme",
    "language-scss",
    "language-sql",
    "language-swift",
    "language-toml",
    "language-typescript",
    "language-tsx",
    "language-vim",
    "language-wast",
    "language-wat",
    "language-x86asm",
    "language-wgsl",
    "language-yaml",
    "language-zig",
]

language-ada = []
language-asm = []
language-astro = []
language-awk = []
language-bash = []
language-bibtex = []
language-bicep = []
language-blueprint = []
language-c = []
language-capnp = []
language-clojure = []
language-c-sharp = []
language-commonlisp = []
language-cpp = []
language-css = []
language-cue = []
language-d = []
language-dart = []
language-diff = []
language-dockerfile = []
language-eex = []
language-elisp = []
language-elixir = []
language-elm = []
language-erlang = []
language-forth = []
language-fortran = []
language-gdscript = []
language-gleam = []
language-glsl = []
language-go = []
language-haskell = []
language-hcl = []
language-heex = []
language-html = []
language-iex = []
language-ini = []
language-java = []
language-javascript = []
language-json = []
language-jsx = []
language-kotlin = []
language-latex = []
language-llvm = []
language-lua = []
language-make = []
language-matlab = []
language-meson = []
language-nim = []
language-nix = []
language-ocaml = []
language-ocaml-interface = []
language-openscad = []
language-pascal = []
language-php = []
language-plaintext = []
language-proto = []
language-python = []
language-r = []
language-racket = []
language-regex = []
language-ruby = []
language-rust = []
language-scala = []
language-scheme = []
language-scss = []
language-sql = []
language-swift = []
language-toml = []
language-typescript = []
language-tsx = []
language-vim = []
language-wast = []
language-wat = []
language-x86asm = []
language-wgsl = []
language-yaml = []
language-zig = []

[dependencies]
once_cell = "1.18.0"
thiserror = "1.0.44"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"

ahash = { version = "0.8.3", optional = true }
toml = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
v_htmlescape = { version = "0.15.8", optional = true }

[build-dependencies]
syn = { version = "2.0.37", features = ["full", "parsing"], optional = true}
proc-macro2 = { version = "1.0.67", optional = true }
quote = { version = "1.0.33", optional = true }
prettyplease = { version = "0.2.15", optional = true }
fs_extra = { version = "1.3.0", optional = true }

anyhow = "1.0.75"
cc = "1.0.83"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
